--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,19 +20,19 @@ opt-level = "z"
 
 
 [dependencies]
-tracing = { optional = true, version = "0.1.40", features = ["log-always"] }
-esp-idf-svc = { version = "0.49", features = ["critical-section"] }
+tracing = { optional = true, version = "0.1.4", features = ["log-always"] }
+esp-idf-svc = { version = "0.49.1", features = ["critical-section"] }
 
 # Asybchronous runtime
 # Tokio
-tokio = { optional = true, version = "1.41.1", features = ["fs", "net", "rt", "sync", "time", "io-util", "tracing"] }
+tokio = { optional = true, version = "1.42.0", features = ["fs", "net", "rt", "sync", "time", "io-util", "tracing"] }
 
 # Embassy
-embassy-sync = { optional = true, version = "0.6.0", features = [] }
+embassy-sync = { optional = true, version = "0.6.1", features = [] }
 
 # Error handling
-anyhow = "1.0.93"
-thiserror = "2.0.1"
+anyhow = "1.0.94"
+thiserror = "2.0.6"
 error-stack = { version = "0.5.0", features = ["std", "anyhow", "backtrace"] }
 log = "0.4.22"
 
@@ -41,7 +41,7 @@ embuild = "0.32.0"
 cc = "=1.1.30" # Necessary until a new version of `esp-idf-sys` is released
 
 [features]
-default = ["log", "rt-tokio"]
+default = ["rt-embassy"]
 
 log = ["tracing", "embassy-sync?/log"]
 
